  - Do not require root privilege to launch MPD

 * Bug fixes:
  - Blurring in OSD mode will not cause a frame around lyrics
  - Fix compilation issue in BDS systems.
  - Fix track duration in MPRIS support
  - Deal with player launch commands with %f or %U as arguments
  - ttPlayer engine can search lyrics with ' in the title
  - CUE sheets are supported now

Version 0.4.1: 2011-07-19
 * Choose player if no supported player running on launch
 * Outline blur on OSD mode
 * Support all MPRIS-compatible players
 * New lyrics search site: xiami.com
 * Fix ttPlayer search
 * Search lyrics from more than one sites
 * All files with the name of `osd-lyrics' are replaced to `osdlyrics'

Version 0.4.0: 2011-06-04
 * Support more players: Clementine, Deciber-audio-player, Gmusicbrowser, Listen, and VLC.
 * Display OSD lyrics as a normal window.
 * Display lyrics in traditional scrolling mode.
 * Add proxy support.
 * Use ttPlayer instead of other lyric download sites.
 - Improve performance with MPRIS-compatible players.

Version 0.3.20100604: 2010-06-04
 * Add Juk and Qmmp support
 - Add app indicator support for Ubuntu 10.04
 - Add singleton detection
 - Honor MPD_HOST and MPD_PORT environment variables for MPD
 * The `mouse click through' feature is back for GTK+ 2.20 users
 * The appearance under a window manager without compositing support is correct now
 - It won't crash now when you open the lyric assign dialog more than once
 - The first line of lyric will not be lost when there is a BOM of utf-8 in the file.
 - Fix that the last lyric doesn't get its progress with Rhythmbox.

Version 0.3.20100330: 2010-03-30
 * Download lyrics from MiniLyrics
 * Player control on background panel of OSD Window
 * Encoding detection of LRC files
 - Display player icon in notification
 - FIX: Can not hide OSD Window
 - FIX: Advance/delay offset doesn't work from popup menu
 - Some minor fixes

Version 0.3.20100211: 2010-02-11
Changes since 0.2.20100201