@@ -17,6 +17,7 @@ Version 0.4.2:
   - Deal with player launch commands with %f or %U as arguments
   - ttPlayer engine can search lyrics with ' in the title
   - CUE sheets are supported now
+  - Don't show invalid search result of Xiami engine
 
 Version 0.4.1: 2011-07-19
  * Choose player if no supported player running on launch
